# SubstringSearchCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  statistic.csv  statistic_report.py  statistic_with_matches.csv  statistic_with_no_matches.csv  test.cpp
include/: csv_writer.h  knuth_morris_pratt.h  rabin-karp.h  utils.h
src/: knuth_morris_pratt.cpp  rabin_karp.cpp  utils.cpp
